# vstation

./: meson.build  package-lock.json  package.json  setup.py  vstation-server
fxf/: app.vala  main.vala  meson.build  vstation-fxf.c  vstation.gresource.xml  window.cmb  window.ui  window.vala
py/: requirements.txt  service.py
src/: fileinput.jsx  filelist.jsx  index.css  index.js  screen.jsx  server.mjs  textinput.jsx
